[package]
name = "cozad_union_find"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "An implementation of the union-find disjoint set graph algorithm"
repository = "https://github.com/ccozad/cozad-union-find"
readme = "./src/README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "/src/README.md",
    "LICENSE-MIT",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }